neg-check setting not working: fixing typo bug